@@ -117,6 +117,9 @@ New Features
               location of the data source.
               (Jason Shepherd, Noble Paul via shalin)
 
+28.SOLR-1083: An Evaluator for escaping query characters.
+              (Noble Paul, shalin)
+
 Optimizations
 ----------------------
 1. SOLR-846:  Reduce memory consumption during delta import by removing keys when used
